--- a/css/main.css
+++ b/css/main.css
@@ -55,38 +55,86 @@
 
 /*-- fade out animation--*/
 @-webkit-keyframes fadeOut {
-  0%   { opacity: 1; }
-  100% { opacity: 0; }
+  0%   { 
+  	opacity: 1; 
+  	-webkit-transform: translate(0,0);
+  }
+  100% { 
+  	opacity: 0; 
+  	-webkit-transform: translate(0,0);
+  }
 }
 @-moz-keyframes fadeOut {
-  0%   { opacity: 1; }
-  100% { opacity: 0; }
+  0%   { 
+  	opacity: 1; 
+  	-moz-transform: translate(0,0);
+  }
+  100% { 
+  	opacity: 0; 
+  	-moz-transform: translate(0,0);
+  }
 }
 @-o-keyframes fadeOut {
-  0%   { opacity: 1; }
-  100% { opacity: 0; }
+  0%   { 
+  	opacity: 1; 
+  	-o-transform: translate(0,0);
+  }
+  100% { 
+  	opacity: 0; 
+  	-o-transform: translate(0,0);
+  }
 }
 @keyframes fadeOut {
-  0%   { opacity: 1; }
-  100% { opacity: 0; }
+  0%   { 
+  	opacity: 1; 
+  	transform: translate(0,0);
+  }
+  100% { 
+  	opacity: 0; 
+  	transform: translate(0,0);
+  }
 }
 
 /*-- fade in animation--*/
 @-webkit-keyframes fadeIn {
-  0%   { opacity: 0; }
-  100% { opacity: 1; }
+  0%   { 
+  	opacity: 0; 
+  	-webkit-transform: translate(0,0);
+  }
+  100% { 
+  	opacity: 1; 
+  	-webkit-transform: translate(0,0);
+  }
 }
 @-moz-keyframes fadeIn {
-  0%   { opacity: 0; }
-  100% { opacity: 1; }
+  0%   { 
+  	opacity: 0; 
+  	-moz-transform: translate(0,0);
+  }
+  100% { 
+  	opacity: 1; 
+  	-moz-transform: translate(0,0);
+  }
 }
 @-o-keyframes fadeIn {
-  0%   { opacity: 0; }
-  100% { opacity: 1; }
+  0%   { 
+  	opacity: 0; 
+  	-o-transform: translate(0,0);
+  }
+  100% { 
+  	opacity: 1; 
+  	-o-transform: translate(0,0);
+  }
 }
 @keyframes fadeIn {
-  0%   { opacity: 0; }
-  100% { opacity: 1; }
+  0%   { 
+  	opacity: 0; 
+  	transform: translate(0,0);
+  }
+  100% { 
+  	opacity: 1; 
+  	transform: translate(0,0);
+  }
 }
 
 /*-- slide out animation--*/
@@ -157,6 +205,39 @@
   }
 }
 
+/*-- slide in back animation--*/
+@-webkit-keyframes slideInBack {
+  0%   {
+  	-webkit-transform: translate(-300px,0);
+  }
+  100% { 
+  	-webkit-transform: translate(0,0);
+  }
+}
+@-moz-keyframes slideInBack {
+  0%   {
+  	-moz-transform: translate(-300px,0);
+  }
+  100% { 
+  	-moz-transform: translate(0,0);
+  }
+}
+@-o-keyframes slideInBack {
+  0%   {
+  	-o-transform: translate(-300px,0);
+  }
+  100% { 
+  	-o-transform: translate(0,0);
+  }
+}
+@keyframes slideInBack {
+  0%   {
+  	transform: translate(-300px,0);
+  }
+  100% { 
+  	transform: translate(0,0);
+  }
+}
 
 /*-- frame 1 --*/
 .title1 {
@@ -175,7 +256,16 @@
 	-o-animation: fadeOut 1s ease-in-out 2s forwards;
 	animation: fadeOut 1s ease-in-out 2s forwards;	
 }
+/*-- for non css3 supported browsers --*/
+.title1-container{
+	left: 300px;
 
+	-webkit-animation: slideOut 0s ease-in-out 0s forwards;
+	-moz-animation: slideOut 0s ease-in-out 0s forwards;
+	-ms-animation: slideOut 0s ease-in-out 0s forwards;
+	-o-animation: slideOut 0s ease-in-out 0s forwards;
+	animation: slideOut 0s ease-in-out 0s forwards;
+}
 
 .plate1 {
 	width: 168px;
@@ -193,6 +283,17 @@
 	animation: slideOut 1s ease-in-out 2s forwards;	
 }
 
+/*-- for non css3 supported browsers --*/
+.plate1-container{
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+	opacity: 0;
+	-webkit-animation: fadeIn 0s ease-in-out 0s forwards;
+	-moz-animation: fadeIn 0s ease-in-out 0s forwards;
+	-ms-animation: fadeIn 0s ease-in-out 0s forwards;
+	-o-animation: fadeIn 0s ease-in-out 0s forwards;
+	animation: fadeIn 0s ease-in-out 0s forwards;
+}
+
 /*-- frame 2--*/
 .title2{
 	width: 152px;
@@ -202,7 +303,12 @@
 	left: 50%;
 	margin-left: -76px;
 	top: 75px;
-	opacity: 0;
+
+	-webkit-transform: translate(300px,0);
+	-moz-transform: translate(300px,0);
+	-ms-transform: translate(300px,0);
+	-o-transform: translate(300px,0);
+	transform: translate(300px,0);
 
 	-webkit-animation: fadeIn 1s ease-in-out 2.5s forwards;
 	-moz-animation: fadeIn 1s ease-in-out 2.5s forwards;
@@ -210,36 +316,59 @@
 	-o-animation: fadeIn 1s ease-in-out 2.5s forwards;
 	animation: fadeIn 1s ease-in-out 2.5s forwards;	
 }
+/*-- for non css3 supported browsers --*/
+.title2-container{
+	-webkit-transform: translate(-300px,0);
+	-moz-transform: translate(-300px,0);
+	-ms-transform: translate(-300px,0);
+	-o-transform: translate(-300px,0);
+	transform: translate(-300px,0);
+
+	-webkit-animation: slideInBack 0s ease-in-out 0s forwards;
+	-moz-animation: slideInBack 0s ease-in-out 0s forwards;
+	-ms-animation: slideInBack 0s ease-in-out 0s forwards;
+	-o-animation: slideInBack 0s ease-in-out 0s forwards;
+	animation: slideInBack 0s ease-in-out 0s forwards;
+}
 .plate2{
 	width: 159px;
 	height: 110px;
 	background: url('../img/image2.png') no-repeat center center;
 	position: absolute;
 	left: 50%;
-	margin-left: -80px;
+	margin-left: 220px;
 	top: 120px;
 
-	-webkit-transform: translate(300px, 0);
-	-moz-transform: translate(300px, 0);
-	-ms-transform: translate(300px, 0);
-	transform: translate(300px, 0);
-
-	-webkit-animation: slideIn 1s ease-in-out 2s forwards;
-	-moz-animation: slideIn 1s ease-in-out 2s forwards;
-	-ms-animation: slideIn 1s ease-in-out 2s forwards;
-	-o-animation: slideIn 1s ease-in-out 2s forwards;
-	animation: slideIn 1s ease-in-out 2s forwards;	
+	-webkit-animation: slideOut 1s ease-in-out 2s forwards;
+	-moz-animation: slideOut 1s ease-in-out 2s forwards;
+	-ms-animation: slideOut 1s ease-in-out 2s forwards;
+	-o-animation: slideOut 1s ease-in-out 2s forwards;
+	animation: slideOut 1s ease-in-out 2s forwards;	
 }
 .text2{
 	width: 48px;
 	height: 27px;
 	background: url('../img/text2.png') no-repeat center center;
 	position: absolute;
-	left: 100%;
-	top: 50%;
-	margin: -20px 0 0 7px;
+	left: 235px;
+	top: 160px;
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+	opacity: 0;
+
+	-webkit-animation: fadeIn 1s ease-in-out 3s forwards;
+	-moz-animation: fadeIn 1s ease-in-out 3s forwards;
+	-ms-animation: fadeIn 1s ease-in-out 3s forwards;
+	-o-animation: fadeIn 1s ease-in-out 3s forwards;
+	animation: fadeIn 1s ease-in-out 3s forwards;
 }
-.platt2-container{
+.text2-container{
+	-webkit-animation: fadeOut 1s ease-in-out 5s forwards;
+	-moz-animation: fadeOut 1s ease-in-out 5s forwards;
+	-ms-animation: fadeOut 1s ease-in-out 5s forwards;
+	-o-animation: fadeOut 1s ease-in-out 5s forwards;
+	animation: fadeOut 1s ease-in-out 5s forwards;	
+}
+.plate2-container{
 	-webkit-animation: slideOut 1s ease-in-out 5s forwards;
 	-moz-animation: slideOut 1s ease-in-out 5s forwards;
 	-ms-animation: slideOut 1s ease-in-out 5s forwards;
@@ -254,19 +383,14 @@
 	background: url('../img/image3.png') no-repeat center center;
 	position: absolute;
 	left: 50%;
-	margin-left: -82px;
+	margin-left: 218px;
 	top: 130px;
 
-	-webkit-transform: translate(300px, 0);
-	-moz-transform: translate(300px, 0);
-	-ms-transform: translate(300px, 0);
-	transform: translate(300px, 0);
-
-	-webkit-animation: slideIn 1s ease-in-out 5s forwards;
-	-moz-animation: slideIn 1s ease-in-out 5s forwards;
-	-ms-animation: slideIn 1s ease-in-out 5s forwards;
-	-o-animation: slideIn 1s ease-in-out 5s forwards;
-	animation: slideIn 1s ease-in-out 5s forwards;	
+	-webkit-animation: slideOut 1s ease-in-out 5s forwards;
+	-moz-animation: slideOut 1s ease-in-out 5s forwards;
+	-ms-animation: slideOut 1s ease-in-out 5s forwards;
+	-o-animation: slideOut 1s ease-in-out 5s forwards;
+	animation: slideOut 1s ease-in-out 5s forwards;	
 }
 
 .text3{
@@ -274,11 +398,24 @@
 	height: 27px;
 	background: url('../img/text3.png') no-repeat center center;
 	position: absolute;
-	left: 100%;
-	top: 50%;
-	margin: -10px 0 0 10px;
+	left: 242px;
+	top: 150px;
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+	opacity: 0;
+	-webkit-animation: fadeIn 1s ease-in-out 6s forwards;
+	-moz-animation: fadeIn 1s ease-in-out 6s forwards;
+	-ms-animation: fadeIn 1s ease-in-out 6s forwards;
+	-o-animation: fadeIn 1s ease-in-out 6s forwards;
+	animation: fadeIn 1s ease-in-out 6s forwards;
 }
-.platt3-container{
+.text3-container{
+	-webkit-animation: fadeOut 1s ease-in-out 8s forwards;
+	-moz-animation: fadeOut 1s ease-in-out 8s forwards;
+	-ms-animation: fadeOut 1s ease-in-out 8s forwards;
+	-o-animation: fadeOut 1s ease-in-out 8s forwards;
+	animation: fadeOut 1s ease-in-out 8s forwards;
+}
+.plate3-container{
 	-webkit-animation: slideOut 1s ease-in-out 8s forwards;
 	-moz-animation: slideOut 1s ease-in-out 8s forwards;
 	-ms-animation: slideOut 1s ease-in-out 8s forwards;
@@ -293,19 +430,14 @@
 	background: url('../img/image4.png') no-repeat center center;
 	position: absolute;
 	left: 50%;
-	margin-left: -84px;
+	margin-left: 216px;
 	top: 130px;
 
-	-webkit-transform: translate(300px, 0);
-	-moz-transform: translate(300px, 0);
-	-ms-transform: translate(300px, 0);
-	transform: translate(300px, 0);
-
-	-webkit-animation: slideIn 1s ease-in-out 8s forwards;
-	-moz-animation: slideIn 1s ease-in-out 8s forwards;
-	-ms-animation: slideIn 1s ease-in-out 8s forwards;
-	-o-animation: slideIn 1s ease-in-out 8s forwards;
-	animation: slideIn 1s ease-in-out 8s forwards;	
+	-webkit-animation: slideOut 1s ease-in-out 8s forwards;
+	-moz-animation: slideOut 1s ease-in-out 8s forwards;
+	-ms-animation: slideOut 1s ease-in-out 8s forwards;
+	-o-animation: slideOut 1s ease-in-out 8s forwards;
+	animation: slideOut 1s ease-in-out 8s forwards;	
 }
 
 .text4{
@@ -313,11 +445,24 @@
 	height: 43px;
 	background: url('../img/text4.png') no-repeat center center;
 	position: absolute;
-	left: 100%;
-	top: 50%;
-	margin: -30px 0 0 8px;
+	left: 242px;
+	top: 145px;
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+	opacity: 0;
+	-webkit-animation: fadeIn 1s ease-in-out 9s forwards;
+	-moz-animation: fadeIn 1s ease-in-out 9s forwards;
+	-ms-animation: fadeIn 1s ease-in-out 9s forwards;
+	-o-animation: fadeIn 1s ease-in-out 9s forwards;
+	animation: fadeIn 1s ease-in-out 9s forwards;
 }
-.platt4-container{
+.text4-container{
+	-webkit-animation: fadeOut 1s ease-in-out 11s forwards;
+	-moz-animation: fadeOut 1s ease-in-out 11s forwards;
+	-ms-animation: fadeOut 1s ease-in-out 11s forwards;
+	-o-animation: fadeOut 1s ease-in-out 11s forwards;
+	animation: fadeOut 1s ease-in-out 11s forwards;
+}
+.plate4-container{
 	-webkit-animation: slideOut 1s ease-in-out 11s forwards;
 	-moz-animation: slideOut 1s ease-in-out 11s forwards;
 	-ms-animation: slideOut 1s ease-in-out 11s forwards;
@@ -344,4 +489,16 @@
 	-ms-animation: slideIn 1s ease-in-out 11s forwards;
 	-o-animation: slideIn 1s ease-in-out 11s forwards;
 	animation: slideIn 1s ease-in-out 11s forwards;	
+}
+.plate5-container{
+	-webkit-transform: translate(-300px, 0);
+	-moz-transform: translate(-300px, 0);
+	-ms-transform: translate(-300px, 0);
+	transform: translate(-300px, 0);	
+	
+	-webkit-animation: slideInBack 0s ease-in-out 0s forwards;
+	-moz-animation: slideInBack 0s ease-in-out 0s forwards;
+	-ms-animation: slideInBack 0s ease-in-out 0s forwards;
+	-o-animation: slideInBack 0s ease-in-out 0s forwards;
+	animation: slideInBack 0s ease-in-out 0s forwards;
 }
