--- a/2016-02-21/source/300x600/css/main_fr.css
+++ b/2016-02-21/source/300x600/css/main_fr.css
@@ -190,7 +190,7 @@
   top: 0px;
   left: 0px;
   width: 300px;
-  height: 600px;
+  height: 250px;
   display: block;  
 }
 
@@ -214,7 +214,7 @@
   animation: slideLeft2 10ms ease-in-out 0s forwards;
 }
 .bg{
-  background: url('../img/300x600_bg.jpg') no-repeat center center;
+  background: url('../img/300x250_bg.jpg') no-repeat center center;
   -webkit-transform: translate(-300px,0);
   -moz-transform: translate(-300px,0);
   -ms-transform: translate(-300px,0);
@@ -242,11 +242,11 @@
 }
 .exclusive-text{
   position: absolute;
-  width: 127px;
-  height: 15px;
-  background: url('../img/300x600_exclusive_en.png') no-repeat center center;
-  top: 277px;
-  left: 88px;
+  width: 80px;
+  height: 10px;
+  background: url('../img/300x250_exclusive_fr.png') no-repeat center center;
+  top: 46px;
+  left: 49px;
 
   -webkit-transform: translate(-300px,0);
   -moz-transform: translate(-300px,0);
@@ -259,40 +259,6 @@
   -ms-animation: fadeIn 1s ease-in-out 2s forwards;
   -o-animation: fadeIn 1s ease-in-out 2s forwards;
   animation: fadeIn 1s ease-in-out 2s forwards;
-}
-
-.nicolette-container{
-  -webkit-transform: translate(300px,0);
-  -moz-transform: translate(300px,0);
-  -ms-transform: translate(300px,0);
-  -o-transform: translate(300px,0);
-  transform: translate(300px,0);
-
-  -webkit-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  -moz-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  -ms-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  -o-animation: slideLeft2 10ms ease-in-out 0s forwards;
-  animation: slideLeft2 10ms ease-in-out 0s forwards;
-}
-.nicolette-text{
-  position: absolute;
-  width: 300px;
-  height: 202px;
-  background: url('../img/300x600_nicolette_mason_en.png') no-repeat center center;
-  top: 235px;
-  left: 0px;
-
-  -webkit-transform: translate(-300px,0);
-  -moz-transform: translate(-300px,0);
-  -ms-transform: translate(-300px,0);
-  -o-transform: translate(-300px,0);
-  transform: translate(-300px,0);
-
-  -webkit-animation: fadeIn 1s ease-in-out 3s forwards;
-  -moz-animation: fadeIn 1s ease-in-out 3s forwards;
-  -ms-animation: fadeIn 1s ease-in-out 3s forwards;
-  -o-animation: fadeIn 1s ease-in-out 3s forwards;
-  animation: fadeIn 1s ease-in-out 3s forwards;
 }
 
 .cocktail-container{
@@ -310,11 +276,45 @@
 }
 .cocktail-text{
   position: absolute;
-  width: 256px;
-  height: 10px;
-  background: url('../img/300x600_coctail_en.png') no-repeat center center;
-  top: 378px;
-  left: 21px;
+  width: 146px;
+  height: 8px;
+  background: url('../img/300x250_coctail_fr.png') no-repeat center center;
+  top: 62px;
+  left: 15px;
+
+  -webkit-transform: translate(-300px,0);
+  -moz-transform: translate(-300px,0);
+  -ms-transform: translate(-300px,0);
+  -o-transform: translate(-300px,0);
+  transform: translate(-300px,0);
+
+  -webkit-animation: fadeIn 1s ease-in-out 3s forwards;
+  -moz-animation: fadeIn 1s ease-in-out 3s forwards;
+  -ms-animation: fadeIn 1s ease-in-out 3s forwards;
+  -o-animation: fadeIn 1s ease-in-out 3s forwards;
+  animation: fadeIn 1s ease-in-out 3s forwards;
+}
+
+.nicolette-container{
+  -webkit-transform: translate(300px,0);
+  -moz-transform: translate(300px,0);
+  -ms-transform: translate(300px,0);
+  -o-transform: translate(300px,0);
+  transform: translate(300px,0);
+
+  -webkit-animation: slideLeft2 10ms ease-in-out 0s forwards;
+  -moz-animation: slideLeft2 10ms ease-in-out 0s forwards;
+  -ms-animation: slideLeft2 10ms ease-in-out 0s forwards;
+  -o-animation: slideLeft2 10ms ease-in-out 0s forwards;
+  animation: slideLeft2 10ms ease-in-out 0s forwards;
+}
+.nicolette-text{
+  position: absolute;
+  width: 193px;
+  height: 99px;
+  background: url('../img/300x250_nicolette_mason_fr.png') no-repeat center center;
+  top: 45px;
+  left: 0px;
 
   -webkit-transform: translate(-300px,0);
   -moz-transform: translate(-300px,0);
@@ -344,11 +344,11 @@
 }
 .now-available-text{
   position: absolute;
-  width: 164px;
-  height: 14px;
-  background: url('../img/300x600_now_available_en.png') no-repeat center center;
-  top: 423px;
-  left: 72px;
+  width: 139px;
+  height: 7px;
+  background: url('../img/300x250_now_available_fr.png') no-repeat center center;
+  top: 126px;
+  left: 19px;
 
   -webkit-transform: translate(-300px,0);
   -moz-transform: translate(-300px,0);
@@ -378,11 +378,11 @@
 }
 .hover-text{
   position: absolute;
-  width: 195px;
-  height: 52px;
-  background: url('../img/300x600_cta_en.png') no-repeat center center;
-  top: 450px;
-  left: 55px;
+  width: 140px;
+  height: 30px;
+  background: url('../img/300x250_cta_fr.png') no-repeat center center;
+  top: 139px;
+  left: 19px;
 
   -webkit-transform: translate(-300px,0);
   -moz-transform: translate(-300px,0);
