--- a/2016-02-21/source/300x600/css/main_fr.css
+++ b/2016-02-21/source/300x600/css/main_fr.css
@@ -190,7 +190,7 @@
   top: 0px;
   left: 0px;
   width: 300px;
-  height: 250px;
+  height: 600px;
   display: block;  
 }
 
@@ -214,7 +214,7 @@
   animation: slideLeft2 10ms ease-in-out 0s forwards;
 }
 .bg{
-  background: url('../img/300x250_bg.jpg') no-repeat center center;
+  background: url('../img/300x600_bg_fr.jpg') no-repeat center center;
   -webkit-transform: translate(-300px,0);
   -moz-transform: translate(-300px,0);
   -ms-transform: translate(-300px,0);
@@ -242,11 +242,11 @@
 }
 .exclusive-text{
   position: absolute;
-  width: 80px;
-  height: 10px;
-  background: url('../img/300x250_exclusive_fr.png') no-repeat center center;
-  top: 46px;
-  left: 49px;
+  width: 155px;
+  height: 21px;
+  background: url('../img/300x600_exclusive_fr.png') no-repeat center center;
+  top: 282px;
+  left: 73px;
 
   -webkit-transform: translate(-300px,0);
   -moz-transform: translate(-300px,0);
@@ -276,11 +276,11 @@
 }
 .cocktail-text{
   position: absolute;
-  width: 146px;
-  height: 8px;
-  background: url('../img/300x250_coctail_fr.png') no-repeat center center;
-  top: 62px;
-  left: 15px;
+  width: 247px;
+  height: 13px;
+  background: url('../img/300x600_coctail_fr.png') no-repeat center center;
+  top: 315px;
+  left: 28px;
 
   -webkit-transform: translate(-300px,0);
   -moz-transform: translate(-300px,0);
@@ -310,10 +310,10 @@
 }
 .nicolette-text{
   position: absolute;
-  width: 193px;
-  height: 99px;
-  background: url('../img/300x250_nicolette_mason_fr.png') no-repeat center center;
-  top: 45px;
+  width: 300px;
+  height: 171px;
+  background: url('../img/300x600_nicolette_mason_fr.png') no-repeat center center;
+  top: 284px;
   left: 0px;
 
   -webkit-transform: translate(-300px,0);
@@ -344,11 +344,11 @@
 }
 .now-available-text{
   position: absolute;
-  width: 139px;
-  height: 7px;
-  background: url('../img/300x250_now_available_fr.png') no-repeat center center;
-  top: 126px;
-  left: 19px;
+  width: 243px;
+  height: 13px;
+  background: url('../img/300x600_now_available_fr.png') no-repeat center center;
+  top: 428px;
+  left: 30px;
 
   -webkit-transform: translate(-300px,0);
   -moz-transform: translate(-300px,0);
@@ -378,11 +378,11 @@
 }
 .hover-text{
   position: absolute;
-  width: 140px;
-  height: 30px;
-  background: url('../img/300x250_cta_fr.png') no-repeat center center;
-  top: 139px;
-  left: 19px;
+  width: 216px;
+  height: 48px;
+  background: url('../img/300x600_cta_fr.png') no-repeat center center;
+  top: 453px;
+  left: 46px;
 
   -webkit-transform: translate(-300px,0);
   -moz-transform: translate(-300px,0);
