--- a/2016-02-21/source/320x50/css/main_fr.css
+++ b/2016-02-21/source/320x50/css/main_fr.css
@@ -1,186 +1,186 @@
 /*-- fade out animation--*/
 @-webkit-keyframes fadeOut {
   0%   { 
-  	opacity: 1; 
-  	-webkit-transform: translate(0,0);
+    opacity: 1; 
+    -webkit-transform: translate(0,0);
   }
   100% { 
-  	opacity: 0; 
-  	-webkit-transform: translate(0,0);
+    opacity: 0; 
+    -webkit-transform: translate(0,0);
   }
 }
 @-moz-keyframes fadeOut {
   0%   { 
-  	opacity: 1; 
-  	-moz-transform: translate(0,0);
+    opacity: 1; 
+    -moz-transform: translate(0,0);
   }
   100% { 
-  	opacity: 0; 
-  	-moz-transform: translate(0,0);
+    opacity: 0; 
+    -moz-transform: translate(0,0);
   }
 }
 @-o-keyframes fadeOut {
   0%   { 
-  	opacity: 1; 
-  	-o-transform: translate(0,0);
+    opacity: 1; 
+    -o-transform: translate(0,0);
   }
   100% { 
-  	opacity: 0; 
-  	-o-transform: translate(0,0);
+    opacity: 0; 
+    -o-transform: translate(0,0);
   }
 }
 @keyframes fadeOut {
   0%   { 
-  	opacity: 1; 
-  	transform: translate(0,0);
+    opacity: 1; 
+    transform: translate(0,0);
   }
   100% { 
-  	opacity: 0; 
-  	transform: translate(0,0);
+    opacity: 0; 
+    transform: translate(0,0);
   }
 }
 
 /*-- fade in animation--*/
 @-webkit-keyframes fadeIn {
   0%   { 
-  	opacity: 0; 
-  	-webkit-transform: translate(0,0);
+    opacity: 0; 
+    -webkit-transform: translate(0,0);
   }
   100% { 
-  	opacity: 1; 
-  	-webkit-transform: translate(0,0);
+    opacity: 1; 
+    -webkit-transform: translate(0,0);
   }
 }
 @-moz-keyframes fadeIn {
   0%   { 
-  	opacity: 0; 
-  	-moz-transform: translate(0,0);
+    opacity: 0; 
+    -moz-transform: translate(0,0);
   }
   100% { 
-  	opacity: 1; 
-  	-moz-transform: translate(0,0);
+    opacity: 1; 
+    -moz-transform: translate(0,0);
   }
 }
 @-o-keyframes fadeIn {
   0%   { 
-  	opacity: 0; 
-  	-o-transform: translate(0,0);
+    opacity: 0; 
+    -o-transform: translate(0,0);
   }
   100% { 
-  	opacity: 1; 
-  	-o-transform: translate(0,0);
+    opacity: 1; 
+    -o-transform: translate(0,0);
   }
 }
 @keyframes fadeIn {
   0%   { 
-  	opacity: 0; 
-  	transform: translate(0,0);
+    opacity: 0; 
+    transform: translate(0,0);
   }
   100% { 
-  	opacity: 1; 
-  	transform: translate(0,0);
+    opacity: 1; 
+    transform: translate(0,0);
   }
 }
 
 /*-- slide out animation--*/
 @-webkit-keyframes slideLeft {
   0%   {
-  	-webkit-transform: translate(0,0);
+    -webkit-transform: translate(0,0);
   }
   100% { 
-  	-webkit-transform: translate(-320px,0);
+    -webkit-transform: translate(-320px,0);
   }
 }
 @-moz-keyframes slideLeft {
   0%   {
-  	-moz-transform: translate(0,0);
+    -moz-transform: translate(0,0);
   }
   100% { 
-  	-moz-transform: translate(-320px,0);
+    -moz-transform: translate(-320px,0);
   }
 }
 @-o-keyframes slideLeft {
   0%   {
-  	-o-transform: translate(0,0);
+    -o-transform: translate(0,0);
   }
   100% { 
-  	-o-transform: translate(-320px,0);
+    -o-transform: translate(-320px,0);
   }
 }
 @keyframes slideLeft {
   0%   {
-  	transform: translate(0,0);
+    transform: translate(0,0);
   }
   100% { 
-  	transform: translate(-320px,0);
+    transform: translate(-320px,0);
   }
 }
 
 /*-- slide in animation--*/
 @-webkit-keyframes slideLeft2 {
   0%   {
-  	-webkit-transform: translate(320px,0);
+    -webkit-transform: translate(320px,0);
   }
   100% { 
-  	-webkit-transform: translate(0,0);
+    -webkit-transform: translate(0,0);
   }
 }
 @-moz-keyframes slideLeft2 {
   0%   {
-  	-moz-transform: translate(320px,0);
+    -moz-transform: translate(320px,0);
   }
   100% { 
-  	-moz-transform: translate(0,0);
+    -moz-transform: translate(0,0);
   }
 }
 @-o-keyframes slideLeft2 {
   0%   {
-  	-o-transform: translate(320px,0);
+    -o-transform: translate(320px,0);
   }
   100% { 
-  	-o-transform: translate(0,0);
+    -o-transform: translate(0,0);
   }
 }
 @keyframes slideLeft2 {
   0%   {
-  	transform: translate(320px,0);
+    transform: translate(320px,0);
   }
   100% { 
-  	transform: translate(0,0);
+    transform: translate(0,0);
   }
 }
 
 /*-- slide in back animation--*/
 @-webkit-keyframes slideRight {
   0%   {
-  	-webkit-transform: translate(-320px,0);
+    -webkit-transform: translate(-320px,0);
   }
   100% { 
-  	-webkit-transform: translate(0,0);
+    -webkit-transform: translate(0,0);
   }
 }
 @-moz-keyframes slideRight {
   0%   {
-  	-moz-transform: translate(-320px,0);
+    -moz-transform: translate(-320px,0);
   }
   100% { 
-  	-moz-transform: translate(0,0);
+    -moz-transform: translate(0,0);
   }
 }
 @-o-keyframes slideRight {
   0%   {
-  	-o-transform: translate(-320px,0);
+    -o-transform: translate(-320px,0);
   }
   100% { 
-  	-o-transform: translate(0,0);
+    -o-transform: translate(0,0);
   }
 }
 @keyframes slideRight {
   0%   {
-  	transform: translate(-320px,0);
+    transform: translate(-320px,0);
   }
   100% { 
-  	transform: translate(0,0);
+    transform: translate(0,0);
   }
 }
 
@@ -214,7 +214,7 @@
   animation: slideLeft2 10ms ease-in-out 0s forwards;
 }
 .bg{
-  background: url('../img/320x50_bg.jpg') no-repeat center center;
+  background: url('../img/320x50_bg_fr.jpg') no-repeat center center;
   -webkit-transform: translate(-320px,0);
   -moz-transform: translate(-320px,0);
   -ms-transform: translate(-320px,0);
@@ -243,11 +243,11 @@
 }
 .nicolette-text{
   position: absolute;
-  width: 80px;
-  height: 20px;
-  background: url('../img/320x50_nicolette_mason_en.png') no-repeat center center;
-  top: 16px;
-  left: 82px;
+  width: 77px;
+  height: 19px;
+  background: url('../img/320x50_nicolette_mason_fr.png') no-repeat center center;
+  top: 17px;
+  left: 81px;
 
   -webkit-transform: translate(-320px,0);
   -moz-transform: translate(-320px,0);
@@ -277,11 +277,11 @@
 }
 .hover-text{
   position: absolute;
-  width: 87px;
-  height: 22px;
-  background: url('../img/320x50_cta_en.png') no-repeat center center;
-  top: 14px;
-  left: 230px;
+  width: 86px;
+  height: 29px;
+  background: url('../img/320x50_cta_fr.png') no-repeat center center;
+  top: 13px;
+  left: 229px;
 
   -webkit-transform: translate(-320px,0);
   -moz-transform: translate(-320px,0);
